<resources>
    <string name="hint_input_chat">Enter message here</string>
    <string name="content_desc_send">Send Message</string>
    <string name="txt_empty_chat">No Messages to show</string>
    <string name="txt_loading">Loading chat history</string>
    <string name="lbl_attach_new_image">Capture Image</string>
    <string name="lbl_menu_attach">Attach Image</string>
    <string name="lbl_attach_captured">Select Image</string>
    <string name="lbl_sending_failed">Failed to send. Click to retry</string>
    <string name="lbl_sending_inprogress">Sending ..</string>
    <string name="lbl_sending_upload">Uploading in progress ..</string>
    <string name="lbl_upload_failed">Failed to upload</string>
    <string name="lbl_sent">Sent</string>
    <string name="activity_name_chat">Customer Support Chat</string>
    <string name="activity_name_hub">Communication Hub</string>
    <string name="activity_name_ubox">Unified Inbox</string>
    <string name="state_no_connection">You are not connected to internet</string>
    <string name="msg_connectivity_lost">Lost internet connectivity</string>
    <string name="msg_connectivity_gained">Connected to internet</string>
    <string name="welcome_text">You can ask questions and share your feedback with our customer support team here. Our team will respond to your queries between 7:00AM to 10:00PM</string>
</resources>
