<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_window_background">

    <TextView
        android:id="@+id/messageNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="2dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/helperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:text="@string/txt_loading" />

    <LinearLayout
        android:id="@+id/chat_footer"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/inputMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:maxHeight="128dp"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:lines="3"
            android:scrollbars="vertical"
            android:gravity="top"
            android:layout_gravity="bottom|center_vertical"
            android:background="@drawable/bubble_outgoing"
            android:hint="@string/hint_input_chat"/>
        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_send"
            android:layout_gravity="bottom"
            android:background="@drawable/send_button_background"
            android:src="@drawable/ic_send_white_24dp"
            android:scaleType="center"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listChat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_above="@+id/chat_footer"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:visibility="visible"/>

    <include layout="@layout/welcome_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>


</RelativeLayout>